network/operator_network_policy.yaml
# Rules defined allow traffic only from the desired namespaces to the rhods-operator
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: redhat-ods-operator
spec:
  podSelector:
    matchLabels:
      name: rhods-operator
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              opendatahub.io/generated-namespace: 'true'
  policyTypes:
    - Ingress
